[package]
name = "users-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
async-trait = "0.1.61"
console = "0.15.2"
factori = "1.1.0"
futures-util = "0.3.26"
http-problem = { version = "0.2.1", features = ["actix"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-0_8", "with-chrono-0_4"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
env_logger = "0.10.0"
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde", "rustc-serialize"] }
serde_with = "3.0.0"
dotenv = "0.15.0"

[dev-dependencies]
mockall = "0.11.3"
