[package]
name = "users-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
async-trait = "0.1.61"
console = "0.15.2"
factori = "1.1.0"
futures-util = "0.3.26"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
env_logger = "0.10.0"
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde", "rustc-serialize"] }
serde_with = "3.0.0"
dotenv = "0.15.0"
sqlx = {version = "0.6.3", features = ["postgres", "macros", "chrono", "uuid", "runtime-tokio-rustls"]}
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
mockall = "0.11.3"
